# civicnotice

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MILESTONE_0_7_DONE.md  PRODUCTION_DEPTH_NOTICE_WORKPAPER_PERSISTENCE_DONE.md  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: verify.yml
civicnotice/: __init__.py  channel_plan.py  deadline_tracker.py  main.py  notice_registry.py  persistence.py  public_ui.py  publication_check.py  records_export.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  browser-qa-civicnotice-v0.1.1-alignment-summary.md  browser-qa-production-depth-notice-workpaper-persistence-summary.md  browser-qa-summary.md  github-discussions-seed.md  index.html
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: test_notice_foundation.py  test_production_depth_notice_persistence.py  test_runtime_foundation.py
