[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civicnotice"
version = "0.1.2"
description = "CivicNotice runtime foundation for notice registry, deadline tracking, publication readiness tracking, channel planning, and public-records-aware export support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CivicSuite contributors" }
]
dependencies = [
  "civiccore @ https://github.com/CivicSuite/civiccore/releases/download/v0.9.0/civiccore-0.9.0-py3-none-any.whl",
  "fastapi>=0.115.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
  "build>=1.2.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["civicnotice"]

[tool.hatch.build.targets.sdist]
include = [
  "civicnotice",
  "scripts",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "USER-MANUAL.md",
  "LICENSE-CODE",
  "LICENSE-DOCS",
]

[tool.ruff]
target-version = "py311"
line-length = 100

